# flock

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt
src/core/config/: config.cpp  model.cpp  prompt.cpp
src/custom_parser/: query_parser.cpp
src/custom_parser/query/: model_parser.cpp  prompt_parser.cpp
src/functions/: input_parser.cpp
src/functions/aggregate/: aggregate.cpp  aggregate_state.cpp
src/functions/aggregate/llm_first_or_last/: implementation.cpp  registry.cpp
src/functions/aggregate/llm_reduce/: implementation.cpp  registry.cpp
src/functions/aggregate/llm_rerank/: implementation.cpp  registry.cpp
src/functions/scalar/: scalar.cpp
src/functions/scalar/llm_complete/: implementation.cpp  registry.cpp
src/functions/scalar/llm_embedding/: implementation.cpp  registry.cpp
src/functions/scalar/llm_filter/: implementation.cpp  registry.cpp
src/include/: filesystem.hpp
src/include/flock/core/: common.hpp  config.hpp
src/include/flock/custom_parser/: query_parser.hpp  query_statements.hpp  tokenizer.hpp
src/include/flock/functions/: input_parser.hpp  llm_function_bind_data.hpp
src/include/flock/metrics/: base_manager.hpp  data_structures.hpp  manager.hpp  types.hpp
src/include/flock/model_manager/: model.hpp  repository.hpp
src/include/flock/prompt_manager/: prompt_manager.hpp  repository.hpp
src/metrics/: CMakeLists.txt  metrics.cpp  registry.cpp
src/model_manager/: CMakeLists.txt  model.cpp
src/prompt_manager/: prompt_manager.cpp
src/registry/: scalar.cpp
src/secret_manager/: secret_manager.cpp
(+66 files in other folders)
